@@ -86,6 +86,10 @@ Bug Fixes
   stop words following a span can unduly make the fragment way too long.
   (Elmer Garduno, Lukhnos Liu via David Smiley)
 
+* LUCENE-6948: Fix ArrayIndexOutOfBoundsException in PagedBytes$Reader.fill
+  by removing an unnecessary long-to-int cast.
+  (Michael Lawley via Christine Poerschke)
+
 Other
 
 * LUCENE-6924: Upgrade randomizedtesting to 2.3.2. (Dawid Weiss)
